# QMX

./: .gitignore  CLAUDE.md  CODEBUDDY.md  DASHBOARD_FIX.md  MOBILE_OPTIMIZATION.md  QWEN.md  README.md  TODO.md  conversation-2025-09-10.txt  conversation-2025-09-11.txt  index.html  package.json  pnpm-lock.yaml  settings.local.json  tsconfig.json  vite.config.ts
.github/workflows/: ci-fixed.yml  ci.yml
src/: MainApp.vue  api-test.js  dashboard-test.js  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: cash_database.json  student_database.json
src-tauri/src/: lib.rs  main.rs  validation.rs
src/UserAgreement/: App.vue
src/UserAgreement/components/: Footer.vue  Header.vue  ScrollIndicator.vue  Section.vue
src/api/: ApiService.ts  dataTransformers.ts
src/components/: ConfirmModal.vue  Dashboard.vue  DatePicker.vue  ErrorModal.vue  FinancialStatistics.vue  GradeManagement.vue  MembershipAlerts.vue  ScoreManagement.vue  Settings.vue  StudentManagement.vue  UserAgreement.vue
src/types/: api.ts  frontend.ts  tauri.d.ts
src/utils/: errorHandler.ts  errorHandling.ts  typeGuards.ts
