[package]
name = "qmx-chris233"
version = "0.11.1"
description = "A Tauri App"
authors = ["Chris233 <https://github.com/H-Chris233>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qmx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7", features = ["unstable"] }
tauri-plugin-opener = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qmx_backend_lib = { git = "https://github.com/H-Chris233/qmx_backend_lib" }
chrono = "0.4.41"
log = "0.4.28"
simple_logger = "5.0"

